# Cuda-pHash

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Cuda pHash - Copy.sln  Cuda pHash.sln  Cuda pHash.vcxproj.filters  CudapHash.sln  Full Test.playlist  FuncStats.txt  GuidStats.txt  Quick Test.playlist  README.md
.github/scripts/: cleanup-gpu-runner.sh  provision-gpu-runner.sh
.github/workflows/: c-cpp.yml  tests.yml
App/: App.vcxproj  App.vcxproj.filters  CMakeLists.txt  argparse.hpp  main.cpp
App/Debug/: vc143.idb
App/Debug/App.tlog/: App.lastbuildstate
App/include/: arguments.hpp  hash_command.hpp  helpers.hpp  save_results.hpp  similar_command.hpp
App/src/: arguments.cpp  hash_command.cpp  helpers.cpp  main.cpp  save_results.cpp  similar_command.cpp
App/x64/Release/: App.exe.recipe  App.ipdb
App/x64/Release/App.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Cuda pHash/: Cuda pHash.vcxproj  cuda_utils.hpp  kernels.cu  kernels.cuh  work_queue.hpp
Cuda pHash/Debug/: img_proc.cu.cache  kernels.cu-1185091158.deps  kernels.cu.cache  memory_manager.cu-632623957.deps  memory_manager.cu.cache  memory_manager.cuh-1525295023.deps  memory_manager.cuh.cache  phash_cuda.cu.cache  phash_cuda.cu1621683996.deps  phash_cuda.cuh-1839840010.deps  phash_cuda.cuh.cache
Cuda pHash/Debug/Cuda pHash.tlog/: Cuda pHash.lastbuildstate  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog
Cuda pHash/include/: logger.hpp
Cuda pHash/src/: memory_manager.cu  phash_cuda.cu
Cuda pHash/x64/Debug/: img_proc.cu-1536238023.deps  img_proc.cu.cache  memory_manager.cu-1345548138.deps  memory_manager.cu.cache  phash_cuda.cu.cache  phash_cuda.cu1728021261.deps  phash_cuda.cuh-1139532409.deps  phash_cuda.cuh.cache
Cuda pHash/x64/Debug/Cuda pHash.tlog/: Cuda pHash.lastbuildstate  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog
Cuda pHash/x64/Release/: Cuda pHash.exe.recipe  img_proc.cu-924745129.deps  img_proc.cu.cache  img_proc.cuh-1618620761.deps  kernels.cu-1185091158.deps  kernels.cu.cache  memory_manager.cu-1926108184.deps  memory_manager.cu-632623957.deps  memory_manager.cu.cache  memory_manager.cuh-1525295023.deps  memory_manager.cuh.cache  phash_cuda.cu.cache  phash_cuda.cu1621683996.deps  phash_cuda.cuh-1839840010.deps  phash_cuda.cuh.cache
Cuda pHash/x64/Release/Cuda pHash.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
CudapHash/: CMakeLists.txt  CudapHash.vcxproj  CudapHash.vcxproj.filters
CudapHash/include/: img_proc.cuh  memory_manager.cuh  phash_base.h  phash_cuda.cuh  progress_tracker.hpp  work_queue.hpp
CudapHash/src/: cuda_utils.hpp  img_proc.cu  kernels.cu  kernels.cuh  memory_manager.cu  memory_manager.cuh  phash_cuda.cu  progress_tracker.cpp  work_queue.hpp
Test/: CMakeLists.txt  Test.vcxproj  Test.vcxproj.filters  Unit.cpp
Test/src/: Integration.cpp
Test/unit/App/: arguments_diagnostic.cpp  arguments_minimal.cpp  arguments_test.cpp  helpers_test.cpp  simple_test.cpp
Test/unit/CudapHash/: Unit.cpp  WorkQueueTests.cpp  kernels_test.cpp  kernels_test_wrapper.cu  kernels_test_wrapper.h  memoryManager_test.cpp  workQueue_test.cpp
Test/x64/Release/: Test.dll.recipe  Test.iobj  Test.ipdb  Test.pch
Test/x64/Release/Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
cmake/: CudaPHashConfig.cmake.in  copy_runtime_deps.cmake
include/: phash.h  phash_cuda.cuh
src/: main.cpp  phash_cuda.cu
x64/Release/: Test.exp  Test.lib  Tests.exe.gta.testdurations  XMLGoogleTestResults.xml
